deploy: b935a122deeb6bcee4db29a135db42b67698a142

--- a/getting_started/index.html
+++ b/getting_started/index.html
@@ -414,7 +414,7 @@
 <p>To run License Manager you will need three different systems:</p>
 <ol>
 <li>Slurm cluster (where <code>License Manager Agent</code> runs)</li>
-<li>License servers (FlexLM, RLM, LS-Dyna, LM-X, OLicense or License Manager Simulator)</li>
+<li>License servers (FlexLM, RLM, LS-Dyna, LM-X, OLicense, DSLS or License Manager Simulator)</li>
 <li>API with license information (<code>License Manager API</code>)</li>
 </ol>
 <h2 id="slurm-cluster">Slurm cluster</h2>
@@ -428,6 +428,7 @@
 <li>LS-Dyna</li>
 <li>LM-X</li>
 <li>OLicense</li>
+<li>DSLS</li>
 </ul>
 <p>You need to have the license server installed and working on a path that is accessible to the <code>License Manager Agent</code>.
 The path for each license server binary is configurable in the <code>License Manager Agent</code> charm.
